--- a/index.html
+++ b/index.html
@@ -16,11 +16,12 @@
         </div>
         <!-- filter buttons -->
         <div class="btn-container">
-            <button class="filter-btn" type="button" data-id="all">all</button>
+            <!-- Now we are creating the filter btn dynamically by adding unique categoris in an array + "all" -->
+            <!-- <button class="filter-btn" type="button" data-id="all">all</button>
             <button class="filter-btn" type="button" data-id="breakfast">breakfast</button>
             <button class="filter-btn" type="button" data-id="lunch">lunch</button>
             <button class="filter-btn" type="button" data-id="dinner">dinner</button>
-            <button class="filter-btn" type="button" data-id="shakes">shakes</button>
+            <button class="filter-btn" type="button" data-id="shakes">shakes</button> -->
         </div>
         <!-- menu items -->
         <div class="section-center">
